k8s/micro-services/node-istio.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: nodejs-gateway
spec:
  selector: istio:ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nodejs
spec:
  gateways:
    - nodejs-gateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: nodejs # Name of target service
            port:
              number: 8080
