k8s/micro-services/retry.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: service-A
spec:
  hosts:
    - service-A
  http:
    - route:
        - destination:
            host: service-A # Name of target service
          retries:
            attempts: 5
            perTryTimeout: 2s
